# db-shm-manager

./: Cargo.toml  README.md
examples/: drop_memory.rs  read_write.rs
src/: errors.rs  lib.rs
