[package]
name = "db_shm_manager"
version = "0.1.0"
edition = "2021"
authors = ["Massimo Ghiani <m.ghiani@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
libc = "0.2.151"
log = "0.4.20"
ndarray = {version = "0.15.6", features = ["serde"]}
ndarray-rand = "0.14.0"
nix = "0.27.1"
num-traits = "0.2.17"
rand = "0.8.5"
serde = {version = "1.0.194", features = ["derive"]}
shared_memory = "0.12.4"

[[example]]
name = "read_write"
path = "examples/read_write.rs"

[[example]]
name = "drop_memory"
path = "examples/drop_memory.rs"

[lib]
name = "db_shm_manager"
path = "src/lib.rs"
crate-type = ["lib"]
test = true
bench = true
